--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-redux": "^8.1.1",
